--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/joi": "^17.2.3",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.10.8",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
@@ -31,9 +33,11 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "celebrate": "^15.0.3",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "express-async-errors": "^3.1.1"
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^9.0.2"
     }
 }
