--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/express": "^4.17.21",
         "@types/joi": "^17.2.3",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/multer": "^1.4.11",
         "@types/node": "^20.10.8",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
@@ -38,6 +39,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1"
     }
 }
