--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.10.8",
+        "@types/nodemailer": "^6.4.14",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
@@ -40,7 +41,9 @@
         "date-fns": "^3.2.0",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "handlebars": "^4.7.8",
         "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.8"
     }
 }
