--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
         "celebrate": "^15.0.3",
         "cors": "^2.8.5",
         "date-fns": "^3.2.0",
+        "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "handlebars": "^4.7.8",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.8"
+        "nodemailer": "^6.9.8",
+        "typeorm-pagination": "^2.0.3"
     }
 }
