--- a/package.json
+++ b/package.json
@@ -37,15 +37,18 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "celebrate": "^15.0.3",
+        "class-transformer": "^0.5.1",
         "cors": "^2.8.5",
         "date-fns": "^3.2.0",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "handlebars": "^4.7.8",
+        "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.8",
+        "redis": "^3.1.2",
         "typeorm-pagination": "^2.0.3"
     }
 }
